--- a/index.html
+++ b/index.html
@@ -149,9 +149,9 @@ Can we interpret the internal workings of artificial neural networks in terms of
     </div>
     <p class="margin-top-sm">
       <span class="paper-title">Can Large Language Models Represent Perceptual Reality?</span><br>
-      <span class="paper-title">“Molyneux's Question and Multimodal Models”</span><br>
+      <span class="paper-title">Molyneux's Question and Multimodal Models</span><br>
       <span class="paper-title">
-        “Scientific Use of Foundation Models and Democratization of AI” 
+        Scientific Use of Foundation Models and Democratization of AI 
         (In collaboration with 
         <a href="https://futuretech.mit.edu/" target="_blank">MIT FutureTech</a>
         )
