--- a/index.html
+++ b/index.html
@@ -36,47 +36,48 @@
   <div class="col-sm-7">
     <h2 class="title">Anna<br>Tsvetkov</h2>
   </div>
-  <div class="col-sm-5 text-right">
-    <img class="hero-photo" src="img/social/tsvetkov.jpg" alt="Anna Tsvetkov">
   </div>
 </div>
 
 
 
 
-      <!-- Bio -->
-      <div class="row">
-        <div class="col-sm-7">
-          <div class="info">
-            <div>
-              <p class="margin-top-xs intro">
-                I am a Philosophy PhD and Computer Science (AI/ML) ScM student at
-                <a href="https://philosophy.brown.edu/people" target="_blank"><strong>Brown</strong></a>. I work with
-                <a href="https://sites.google.com/view/adampautz/home" target="_blank"><strong>Adam Pautz<strong></a>,
-                <a href="https://cs.brown.edu/people/epavlick/" target="_blank"><strong>Ellie Pavlick<strong></a>,
-                <a href="https://vivo.brown.edu/display/cshill#" target="_blank"><strong>Chris Hill<strong></a>,
-                and <a href="https://consc.net/" target="_blank"><strong>David Chalmers<strong></a>.
-              </p>
-              <p class="margin-top-xs intro">
-                I am also an AI researcher at
-                <a href="https://futuretech.mit.edu/" target="_blank"><strong>MIT FutureTech</strong></a>. In the Fall, I will be an AI Postdoctoral Research Fellow at
-                <a href="https://ai.princeton.edu/ai-lab" target="_blank"><strong>Princeton</strong></a>.
-              </p>
-              <p class="margin-top-xs intro">
-                My research focuses on human-centered AI. The goal of my work is to use philosophy to guide experiments on AI that deepen our understanding of the mind and, in turn, to use insights about the mind to build explainable and ethical AI.
-              </p>
-              <p class="margin-top-xs intro">
-                You can email me at anna_tsvetkov [at] brown.edu.
-              </p>
-            </div>
-            <p class="intro">
-              <a class="cv" href="about/abhraneel_cv.pdf" target="_blank">
-                CV <i class="fa fa-long-arrow-right" aria-hidden="true"></i>
-              </a>
-            </p>
-          </div>
-        </div>
-      </div>
+<!-- Bio + Portrait -->
+<div class="row">
+  <div class="col-sm-7">
+    <div class="info">
+      <!-- all your bio paragraphs -->
+      <p class="margin-top-xs intro">
+        I am a Philosophy PhD and Computer Science (AI/ML) ScM student at
+        <a href="https://philosophy.brown.edu/people" target="_blank"><strong>Brown</strong></a>. I work with
+        <a href="https://sites.google.com/view/adampautz/home" target="_blank"><strong>Adam Pautz</strong></a>,
+        <a href="https://cs.brown.edu/people/epavlick/" target="_blank"><strong>Ellie Pavlick</strong></a>,
+        <a href="https://vivo.brown.edu/display/cshill#" target="_blank"><strong>Chris Hill</strong></a>,
+        and <a href="https://consc.net/" target="_blank"><strong>David Chalmers</strong></a>.
+      </p>
+      <p class="margin-top-xs intro">
+        I am also an AI researcher at
+        <a href="https://futuretech.mit.edu/" target="_blank"><strong>MIT FutureTech</strong></a>. In the Fall, I will be an AI Postdoctoral Research Fellow at
+        <a href="https://ai.princeton.edu/ai-lab" target="_blank"><strong>Princeton</strong></a>.
+      </p>
+      <p class="margin-top-xs intro">
+        My research focuses on developing human-centered AI. The goal of my work is to use philosophy to guide experiments on AI that deepen our understanding of the mind and, in turn, to use insights about the mind to build explainable and ethical AI.
+      </p>
+      <p class="margin-top-xs intro">
+        You can email me at anna_tsvetkov [at] brown.edu.
+      </p>
+      <p class="intro">
+        <a class="cv" href="about/abhraneel_cv.pdf" target="_blank">CV <i class="fa fa-long-arrow-right"></i></a>
+      </p>
+    </div>
+  </div>
+  <div class="col-sm-5">
+    <img src="img/social/tsvetkov.jpg"
+         alt="Anna Tsvetkov"
+         class="img-responsive img-circle bio-photo">
+  </div>
+</div>
+
                   
 <!-- NEWS -->
 <div class="row margin-top-md">
@@ -148,10 +149,10 @@ Can we interpret the internal workings of artificial neural networks in terms of
       <h2 class="section-title">Works in Progress</h2>
     </div>
     <p class="margin-top-sm">
-      <span class="paper-title">Can Large Language Models Represent Perceptual Reality?</span><br>
-      <span class="paper-title">Molyneux's Question and Multimodal Models</span><br>
-      <span class="paper-title">
-        Scientific Use of Foundation Models and Democratization of AI 
+      <strong class="paper-title">Can Large Language Models Represent Perceptual Reality?</strong><br>
+      <strong class="paper-title">Molyneux's Question and Multimodal Models</strong><br>
+      <strong class="paper-title">Scientific Use of Foundation Models and Democratization of AI</strong><br>
+      <span class="paper-details">
         (In collaboration with 
         <a href="https://futuretech.mit.edu/" target="_blank">MIT FutureTech</a>
         )
