--- a/index.html
+++ b/index.html
@@ -36,10 +36,10 @@
   <div class="col-sm-7">
     <h2 class="title">Anna<br>Tsvetkov</h2>
   </div>
+  <div class="col-sm-5 text-right">
+    <img class="hero-photo img-circle" src="img/social/tsvetkov.jpg" alt="Anna Tsvetkov">
   </div>
 </div>
-
-
 
 
 <!-- Bio + Portrait -->
