--- a/index.html
+++ b/index.html
@@ -149,16 +149,17 @@ Can we interpret the internal workings of artificial neural networks in terms of
       <h2 class="section-title">Works in Progress</h2>
     </div>
     <p class="margin-top-sm">
-      <strong class="paper-title">Can Large Language Models Represent Perceptual Reality?</strong><br>
-      <strong class="paper-title">Molyneux's Question and Multimodal Models</strong><br>
-      <strong class="paper-title">Scientific Use of Foundation Models and Democratization of AI</strong><br>
+      <span class="paper-title">Can Large Language Models Represent Perceptual Reality?</span><br>
+      <span class="paper-title">Molyneux's Question and Multimodal Models</span><br>
+      <span class="paper-title">Scientific Use of Foundation Models and Democratization of AI</span><br>
       <span class="paper-details">
         (In collaboration with 
-        <a href="https://futuretech.mit.edu/" target="_blank">MIT FutureTech</a>
+          <a href="https://futuretech.mit.edu/" target="_blank">MIT FutureTech</a>
         )
       </span>
     </p>
   </div>
 </div>
+
 
 
