--- a/index.html
+++ b/index.html
@@ -157,11 +157,12 @@ Can we interpret the internal workings of artificial neural networks in terms of
       <span class="paper-title">
         Scientific Use of Foundation Models and Democratization of AI
       </span><br>
-      <span class="paper-details">
-        (In collaboration with 
-        <a href="https://futuretech.mit.edu/" target="_blank">MIT FutureTech</a>
-        )
-      </span>
+<span class="paper-details" style="font-size:18px; line-height:1.6;">
+  (In collaboration with 
+    <a href="https://futuretech.mit.edu/" target="_blank">MIT FutureTech</a>
+  )
+</span>
+
     </p>
   </div>
 </div>
