--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
 
 <!-- Publications -->
 <div class="row">
-  <div class="col-sm-7 margin-top-md margin-btm-lg">
+<div class="row margin-top-md">
     <div class="projects">
       <h2 class="section-title">Publications</h2>
     </div>
@@ -143,7 +143,7 @@ Can we interpret the internal workings of artificial neural networks in terms of
 
 <!-- Works in Progress -->
 <div class="row">
-  <div class="col-sm-7 margin-top-md margin-btm-lg">
+<div class="row margin-top-md">
     <div class="projects">
       <h2 class="section-title">Works in Progress</h2>
     </div>
