--- a/index.html
+++ b/index.html
@@ -117,9 +117,11 @@
         <span class="self">Anna Tsvetkov</span><br>
         <span class="venue">
 <a href="pubs/CHI2025-multiple_forecasts.pdf" target="_blank">
-  <i class="fa fa-file-o fa-lg" style="margin-right:4px; vertical-align:middle;"></i>
+  <!-- no more fa-lg, use default ~1em -->
+  <i class="fa fa-file-o" style="margin-right:4px; vertical-align:middle;"></i>
   PDF
 </a>
+
           &nbsp;&bull;&nbsp;
           <a
             data-toggle="collapse"
