--- a/index.html
+++ b/index.html
@@ -117,8 +117,13 @@
         <span class="self">Anna Tsvetkov</span><br>
         <span class="venue">
 <a href="pubs/CHI2025-multiple_forecasts.pdf" target="_blank">
-  <!-- no more fa-lg, use default ~1em -->
-  <i class="fa fa-file-o" style="margin-right:4px; vertical-align:middle;"></i>
+  <i
+    class="fa fa-file-o"
+    style="margin-right:4px;
+           font-size:1em;           /* same size as text */
+           line-height:1em;         /* match PDF text line-height */
+           vertical-align:text-bottom;"
+  ></i>
   PDF
 </a>
 
