--- a/index.html
+++ b/index.html
@@ -119,13 +119,16 @@
 <a href="pubs/CHI2025-multiple_forecasts.pdf" target="_blank">
   <i
     class="fa fa-file-o"
-    style="margin-right:4px;
-           font-size:1em;           /* same size as text */
-           line-height:1em;         /* match PDF text line-height */
-           vertical-align:text-bottom;"
+    style="
+      font-size: 1em;       /* match your PDF text size */
+      line-height: 1em;     /* match your PDF text line-height */
+      margin-right: 4px;
+      vertical-align: -0.125em;  /* pulls the icon up by an eighth of an em */
+    "
   ></i>
   PDF
 </a>
+
 
           &nbsp;&bull;&nbsp;
           <a
