--- a/index.html
+++ b/index.html
@@ -120,14 +120,16 @@
   <i
     class="fa fa-file-o"
     style="
-      font-size: 1em;       /* match your PDF text size */
-      line-height: 1em;     /* match your PDF text line-height */
+      font-size: 1em;
+      line-height: 1em;
       margin-right: 4px;
-      vertical-align: -0.22em;  /* pulls the icon up by an eighth of an em */
+      position: relative;
+      top: -2px; /* pull it up 2px – tweak as needed */
     "
   ></i>
   PDF
 </a>
+
 
 
           &nbsp;&bull;&nbsp;
