--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
       </div>
       <div class="col-sm-10">
         <p class="news-text">
-          Pleased to share that I’ll be speaking at the
+          Pleased to share that I will be speaking at the
           <a href="https://philevents.org/event/show/137714" target="_blank">
             <strong>Bilkent-UNAM Philosophy of Mind Conference</strong>.
           </a>
