--- a/index.html
+++ b/index.html
@@ -165,8 +165,7 @@ Can we interpret the internal workings of artificial neural networks in terms of
       <span class="paper-title">Scientific Use of Foundation Models and Democratization of AI</span><br>
       <span class="paper-details" style="font-size:18px; line-height:1.6;">
         (In collaboration with 
-          <a href="https://futuretech.mit.edu/" target="_blank">MIT FutureTech</a>
-        )
+          <a href="https://futuretech.mit.edu/" target="_blank">MIT FutureTech</a>)
       </span>
     </p>
   </div>
