--- a/index.html
+++ b/index.html
@@ -31,14 +31,18 @@
     <div class="container">
 
 
-<!-- Hero header -->
 <div class="row header-hero">
   <div class="col-sm-7">
     <h2 class="title">Anna<br>Tsvetkov</h2>
   </div>
   <div class="col-sm-5 text-right">
+    <!-- dark mode switch -->
+    <button id="dark-mode-toggle" class="btn btn-link" aria-label="Toggle dark mode">
+      <i id="dark-mode-icon" class="fa fa-moon-o"></i>
+    </button>
   </div>
 </div>
+
 
 
 <!-- Bio + Portrait -->
