--- a/index.html
+++ b/index.html
@@ -31,17 +31,20 @@
     <div class="container">
 
 
+<!-- Hero header -->
 <div class="row header-hero">
   <div class="col-sm-7">
     <h2 class="title">Anna<br>Tsvetkov</h2>
   </div>
   <div class="col-sm-5 text-right">
-    <!-- dark mode switch -->
-    <button id="dark-mode-toggle" class="btn btn-link" aria-label="Toggle dark mode">
-      <i id="dark-mode-icon" class="fa fa-moon-o"></i>
-    </button>
+    <!-- checkbox hack toggle -->
+    <input type="checkbox" id="dark-toggle" class="dark-toggle-checkbox" />
+    <label for="dark-toggle" class="dark-toggle-label" aria-label="Toggle dark mode">
+      <i class="fa fa-moon-o"></i>
+    </label>
   </div>
 </div>
+
 
 
 
