--- a/index.html
+++ b/index.html
@@ -113,15 +113,20 @@
     </div>
     <p class="margin-top-sm">
       <span class="paper-title">
-        <a href="https://osf.io/preprints/osf/t4e9u_v1" target="_blank">
+                <a
+    href="https://annatsv.github.io/pubs/Can_We_Interpret_Artificial_Neural_Net_works_As_Having_Beliefs_and_Desires.pdf"
+    target="_blank"
+  >
           Can We Interpret Artificial Neural Networks As Having Beliefs and Desires?
         </a>
       </span><br>
       <span class="authors">
         <span class="self">Anna Tsvetkov</span><br>
         <span class="venue">
-<a href="pubs/CHI2025-multiple_forecasts.pdf" target="_blank">
-  <i
+  <a
+    href="https://annatsv.github.io/pubs/Can_We_Interpret_Artificial_Neural_Net_works_As_Having_Beliefs_and_Desires.pdf"
+    target="_blank"
+  >
     class="fa fa-file-o"
     style="
       font-size: 1em;
