--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
       <br>
       <span class="authors">
         <span class="self">Anna Tsvetkov</span><br>
-  <span class="venue">(under review)</span><br>
+  <span class="venue">British Journal of the Philosophy of Science (forthcoming)</span><br>
           <a
             href="https://annatsv.github.io/pubs/Can_We_Interpret_Artificial_Neural_Net_works_As_Having_Beliefs_and_Desires.pdf"
             target="_blank"
