--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
         You can email me at anna_tsvetkov [at] brown.edu.
       </p>
       <p class="intro">
-        <a class="cv" href="about/abhraneel_cv.pdf" target="_blank">CV <i class="fa fa-long-arrow-right"></i></a>
+        <a class="cv" href="about/TsvetkovCV.pdf" target="_blank">CV <i class="fa fa-long-arrow-right"></i></a>
       </p>
     </div>
   </div>
