--- a/index.html
+++ b/index.html
@@ -51,15 +51,16 @@
     <div class="info">
       <!-- all your bio paragraphs -->
       <p class="margin-top-xs intro">
-        I'm a Philosophy PhD and Computer Science (AI/ML) ScM student at
-        <a href="https://philosophy.brown.edu/people" target="_blank"><strong>Brown</strong></a>. I work with
+        I am a Philosophy PhD and Computer Science (AI/ML) ScM student at
+        <a href="https://philosophy.brown.edu/people" target="_blank"><strong>Brown</strong></a>. 
+        I work with
         <a href="https://sites.google.com/view/adampautz/home" target="_blank"><strong>Adam Pautz</strong></a>,
         <a href="https://cs.brown.edu/people/epavlick/" target="_blank"><strong>Ellie Pavlick</strong></a>,
         <a href="https://vivo.brown.edu/display/cshill#" target="_blank"><strong>Chris Hill</strong></a>,
         and <a href="https://consc.net/" target="_blank"><strong>David Chalmers</strong></a>.
       </p>
       <p class="margin-top-xs intro">
-        I'm also an AI researcher at
+        I am also an AI researcher at
         <a href="https://futuretech.mit.edu/" target="_blank"><strong>MIT FutureTech</strong></a>. In the Fall, I will be an AI Postdoctoral Research Fellow at
         <a href="https://ai.princeton.edu/ai-lab" target="_blank"><strong>Princeton</strong></a>.
       </p>
